--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "dayjs": "^1.11.18",
     "lucide-react": "^0.542.0",
     "next-themes": "^0.4.6",
-    "react": "^19.1.1",
+    "react": "^18.3.1",
     "react-day-picker": "^9.9.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "^18.3.1",
     "react-email-editor": "^1.7.11",
     "react-hook-form": "^7.62.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^2.15.4",
@@ -53,8 +54,8 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.3.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
