--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://blazing-social-backend-368859323211.us-central1.run.app
-#VITE_API_BASE_URL=http://127.0.0.1:8000
+#VITE_API_BASE_URL=https://blazing-social-backend-368859323211.us-central1.run.app
+VITE_API_BASE_URL=http://127.0.0.1:8000
